# Doc-Intelligence

./: .gitignore  Dockerfile  README.md  pyproject.toml  rav.yaml
app/: __init__.py  main.py
app/api/: dependency.py
app/api/v1/: router.py
app/api/v1/endpoints/: document.py  status.py
app/core/: config.py  logging.py  metrics.py  security.py
app/schemas/: document.py
app/services/: classification.py  extraction.py  ingestion.py  ocr_backends.py  text_cleaning.py
deployment/: UBUNTU_CPU_DEPLOYMENT.md  deploy_ubuntu.sh  doc-intel.service  docker-compose.yml  nginx-doc-intel.conf  ollama.service
deployment/ansible/: README.md  inventory.example.ini  site.yml
deployment/ansible/group_vars/: all.yml
deployment/ansible/templates/: doc-intel.service.j2  env.production.j2  nginx-doc-intel.conf.j2
deployment/monitoring/: blackbox.yml  docker-compose.yml  prometheus.yml
deployment/monitoring/grafana/dashboards/: fastapi-app-metrics.json  fastapi-health.json
deployment/monitoring/grafana/provisioning/dashboards/: dashboards.yml
frotnend/: app.js  index.html  styles.css
scripts/: download_models.py
tests/: test_classification_service.py  test_text_cleaning.py
